--- a/.github/workflows/ci-deploy.yml.yml
+++ b/.github/workflows/ci-deploy.yml.yml
@@ -2,7 +2,8 @@ name: Deploy AWS Lab Playground
 
 on:
   push:
-    branches: [ main-clean ]
+    branches: [ main, clean-main ] 
+  workflow_dispatch: 
 
 permissions:
   id-token: write
@@ -21,30 +22,32 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Configure AWS credentials
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v3
+        with:
+          terraform_version: 1.6.6   # o la que uses
+
+      - name: Configure AWS credentials (OIDC)
         uses: aws-actions/configure-aws-credentials@v4
         with:
           role-to-assume: ${{ secrets.AWS_ROLE_TO_ASSUME }}
-          aws-region: ${{ secrets.AWS_REGION }}
+          aws-region: ${{ env.AWS_REGION }}
 
       - name: Login to Amazon ECR
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v2
 
-      - name: Build, tag, and push Docker image
+      - name: Build, tag and push Docker image
         run: |
           IMAGE_URI=${{ steps.login-ecr.outputs.registry }}/${{ env.ECR_REPOSITORY }}:dev-${GITHUB_SHA::7}
-          docker build -t $IMAGE_URI ./docker
-          docker push $IMAGE_URI
+          docker build -t "$IMAGE_URI" ./docker
+          docker push "$IMAGE_URI"
           echo "IMAGE_URI=$IMAGE_URI" >> $GITHUB_ENV
 
       - name: Terraform Init
-        working-directory: ./
-        run: |
-          terraform init -backend-config="environments/development/backend.hcl"
+        run: terraform init -backend-config="environments/development/backend.hcl"
 
       - name: Terraform Plan
-        working-directory: ./
         run: |
           terraform plan \
             -var-file="environments/development/terraform.tfvars" \
@@ -52,5 +55,4 @@ jobs:
             -out=tfplan-dev
 
       - name: Terraform Apply
-        working-directory: ./
         run: terraform apply -auto-approve tfplan-dev
